--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,84 @@
-.hello {
-	color: red;
+body {
+	box-sizing: border-box;
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
+
+.navbar {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 20px;
+	padding: 20px;
+	margin: 0;
+	background: rosybrown;
+}
+
+.navbar h1 {
+	padding: 0;
+	margin: 0;
+}
+
+.feature {
+	border: 1px solid rosybrown;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 20px;
+}
+
+.feature-img {
+	border: 1px solid rosybrown;
+	border-radius: 50%;
+	height: 150px;
+	width: 350px;
+	margin: 20px;
+}
+
+.feature-text {
+	margin: 20px;
+}
+
+.projects {
+	border: 1px solid rosybrown;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 20px;
+	margin: 20px;
+}
+
+.project {
+	border: 1px solid rosybrown;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 20px;
+	margin: 20px;
+}
+
+.project-head {
+	width: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.footer {
+	border: 1px solid rosybrown;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin: 20px;
+	padding: 20px;
+	gap: 20px;
+}
+
+.footer-content {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 50px;
 }
