--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,128 @@
-body {
-	box-sizing: border-box;
-	border: 0;
+* {
 	margin: 0;
 	padding: 0;
 }
+
+/* NAVBAR */
 
 .navbar {
+	background-color: #FFEDFA;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
-	justify-content: flex-start;
+	padding: 10px 40px;
+	filter: drop-shadow(0px 3px 20px gray); /* generated here: https://webcode.tools/css-generator/drop-shadow */
+}
+
+.navbar-left {
+	display: flex;
 	gap: 20px;
-	padding: 20px;
-	margin: 0;
-	background: rosybrown;
 }
 
-.navbar h1 {
-	padding: 0;
-	margin: 0;
+.navbar-left a, .navbar-right a {
+	font-family: "Signika Negative", serif;
+  	font-size: 16px;
+  	font-weight: bold;
+  	font-style: italic;
+	text-decoration: none;
+	color: black;
 }
 
+.navbar-left a:hover, .navbar-right a:hover {
+	color: #DE3163;
+} 
+
+.navbar img {
+	height: 50px;
+}
+
+/* navbar: dynamic sizing */
+@media (max-width: 400px) {
+	.navbar {
+		justify-content: flex-start;
+		gap: 20px;
+		padding: 10px 20px;
+	}
+
+	.navbar img {
+		order: -1;
+	}
+}
+
+/* MAINBODY */
+.main {
+	margin: 50px;
+	display: block;
+}
+
+
+/* FEATURE */
 .feature {
-	border: 1px solid rosybrown;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 20px;
-}
-
-.feature-img {
-	border: 1px solid rosybrown;
-	border-radius: 50%;
-	height: 150px;
-	width: 350px;
-	margin: 20px;
-}
-
-.feature-text {
-	margin: 20px;
-}
-
-.projects {
-	border: 1px solid rosybrown;
+	border-radius: 50px;
+	background-image: url(./assets/feature-bg.png);
+	height: 500px;
+	background-size: cover; 
+	background-position: left; 
+	background-repeat: no-repeat; 
+	margin: 0;
+	padding: 50px;
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	gap: 20px;
-	margin: 20px;
-}
-
-.project {
-	border: 1px solid rosybrown;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	gap: 20px;
-	margin: 20px;
-}
-
-.project-head {
-	width: 300px;
-	display: flex;
 	justify-content: center;
-	align-items: center;
 }
 
-.footer {
-	border: 1px solid rosybrown;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	margin: 20px;
-	padding: 20px;
-	gap: 20px;
+.feature img { /* only show this when screen size is less than 1100px */
+	display: none;
 }
 
-.footer-content {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	gap: 50px;
+.feature h1 {
+	margin: 0;
+	padding: 0;
+	margin-left: 500px;
+	font-family: "Oleo Script Swash Caps", serif;
+  	font-size: 46px;
+	color: #DE3163;
+}
+
+.feature p {
+	margin: 0;
+	padding: 0;
+	margin-left: 500px;
+	font-family: "Libre Franklin", serif;
+  	font-size: 22px;
+}
+
+/* feature: dynamic sizing */
+@media (max-width: 1100px) {
+	.feature {
+		border: 5px solid #F1EEEB;
+		background-image: none;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		box-sizing: content-box;
+	}
+
+	.feature img { 		
+		display: block;
+		height: 200px;
+		width: 200px;
+		border-radius: 50%;
+		margin-bottom: 20px;
+	}
+
+	.feature h1 {
+		margin: 0;
+		padding: 0;
+		font-size: 28px;
+		margin-bottom: 10px;
+	}
+	
+	.feature p {
+		margin: 0;
+		padding: 0;
+		font-size: 14px;
+	}
 }
