--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 * {
 	margin: 0;
 	padding: 0;
+	color: black;
+}
+
+body {
+	background-color: #FFFFFF;
 }
 
 /* NAVBAR */
@@ -20,8 +25,8 @@
 }
 
 .navbar-left a, .navbar-right a {
-	font-family: "Signika Negative", serif;
-  	font-size: 16px;
+	font-family: "Signika Negative", Arial, Helvetica, sans-serif;
+  	font-size: 18px;
   	font-weight: bold;
   	font-style: italic;
 	text-decoration: none;
@@ -89,7 +94,7 @@
 	margin: 0;
 	padding: 0;
 	margin-left: 500px;
-	font-family: "Libre Franklin", serif;
+	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
   	font-size: 22px;
 }
 
@@ -103,6 +108,7 @@
 		align-items: center;
 		justify-content: center;
 		box-sizing: content-box;
+		height: auto;
 	}
 
 	.feature img { 		
@@ -123,6 +129,248 @@
 	.feature p {
 		margin: 0;
 		padding: 0;
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 800px) {
+	.feature p {
 		font-size: 14px;
 	}
+
+	.feature img { 		
+		display: block;
+		height: 125px;
+		width: 125px;
+	}
+}
+
+/* PROJECTS */
+.projects {
+	margin: 0;
+	padding: 0;
+	padding-top: 50px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
+
+.projects-header {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.projects-header img {
+	height: 100px;
+	width: auto;
+}
+
+.projects-header h1 {
+	margin: 0;
+	padding: 0;
+	font-family: "Oleo Script Swash Caps", serif;
+  	font-size: 46px;
+	color: #DE3163;
+}
+
+.project {
+	margin: 0;
+	padding: 50px;
+	display: flex;
+	gap: 30px;
+	border-radius: 50px;
+}
+
+#proj-1 {
+	background-image: linear-gradient(to left, #E195AB, #FFFFFF);
+}
+
+#proj-2 {
+	background-image: linear-gradient(to right, #CCDF92, #FFFFFF);
+}
+
+#proj-3 {
+	background-image: linear-gradient(to left, #FFEDFA, #FFFFFF);
+}
+
+.project img {
+	height: 300px;
+}
+
+.project-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 10px;
+}
+
+.project-content h3 {
+	font-family: "Signika Negative", Arial, Helvetica, sans-serif;
+  	font-size: 36px;
+  	font-weight: bold;
+  	font-style: italic;
+}
+
+.project-content p {
+	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
+  	font-size: 22px;
+}
+
+/* projects: dynamic sizing */
+@media (max-width: 1200px) {
+	.project img {
+		height: 200px;
+	}
+
+	.project-content p {
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 900px) {
+	.project {
+		flex-direction: column;
+	}
+
+	.project img {
+		order: -1;
+		height: 140px;
+		align-self: center;
+	}
+
+	.project-content p {
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 400px) {
+	.project {
+		flex-direction: column;
+	}
+
+	.projects img {
+		order: -1;
+		height: 100px;
+		align-self: center;
+	}
+
+	.project-content p {
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 1100px) {
+	.projects-header h1 {
+		font-size: 28px;
+	}
+
+	.projects-header img {
+		height: 50px;
+	}
+}
+
+@media (max-width: 700px) {
+	.projects-header img {
+		display: none;
+	}
+
+	#proj-1 {
+		background-image: linear-gradient(#E195AB, #FFFFFF);
+	}
+	
+	#proj-2 {
+		background-image: linear-gradient(#CCDF92, #FFFFFF);
+	}
+	
+	#proj-3 {
+		background-image: linear-gradient(#FFEDFA, #FFFFFF);
+	}
+}
+
+/* SKILLS */
+.skills {
+	margin: 0;
+	padding: 0;
+	padding-top: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.skills img {
+	height: 100px;
+	align-self: center;
+	width: auto;
+}
+
+.skills-content {
+	padding: 0 50px;
+	padding-top: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 50px
+}
+
+.skills-content h1 {
+	margin: 0;
+	padding: 0;
+	font-family: "Oleo Script Swash Caps", serif;
+  	font-size: 46px;
+	color: #DE3163;
+}
+
+.skills-list {
+	list-style: none;
+	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
+  	font-size: 22px;
+}
+
+/* skills: dynamic sizing */
+@media (max-width: 1100px) {
+	.skills-content {
+		padding: 0 20px;
+	}
+	.skills img {
+		height: 50px;
+	}
+}
+
+@media (max-width: 800px) {
+	.skills-content {
+		gap: 20px;
+	}
+	.skills-content h1 {
+		font-size: 28px;
+	}
+
+	.skills-list {
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 400px) {
+	.skills img {
+		height: 35px;
+	}
+}
+
+.top {
+	display: flex;
+	flex-direction: row-reverse;
+	padding: 15px 5px;
+	box-sizing: border-box;
+	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
+  	font-size: 18px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #E195AB;
+}
+
+.top:hover {
+	color: #CCDF92;
 }
