--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,16 @@ body {
 	.navbar img {
 		order: -1;
 	}
+
+	.navbar a {
+		font-size: 14px;
+	}
 }
 
 /* MAINBODY */
 .main {
 	margin: 50px;
+	margin-bottom: 20px;
 	display: block;
 }
 
@@ -302,7 +307,7 @@ body {
 }
 
 .skills img {
-	height: 100px;
+	height: 75px;
 	align-self: center;
 	width: auto;
 }
@@ -362,7 +367,8 @@ body {
 .top {
 	display: flex;
 	flex-direction: row-reverse;
-	padding: 15px 5px;
+	padding: 0;
+	padding-top: 15px;
 	box-sizing: border-box;
 	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
   	font-size: 18px;
@@ -373,6 +379,12 @@ body {
 
 .top:hover {
 	color: #CCDF92;
+}
+
+@media (max-width: 550px) {
+	.top {
+		padding: 30px 0px 15px 0px;
+	}
 }
 
 /* FOOTER */
