--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,14 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 40px;
+	margin: 0;
 	filter: drop-shadow(0px 3px 20px gray); /* generated here: https://webcode.tools/css-generator/drop-shadow */
+	overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+	box-sizing: border-box;
+    z-index: 1000;
 }
 
 .navbar-left {
@@ -61,6 +68,7 @@ body {
 /* MAINBODY */
 .main {
 	margin: 50px;
+	margin-top: 125px;
 	margin-bottom: 20px;
 	display: block;
 }
@@ -241,10 +249,13 @@ body {
 		flex-direction: column;
 	}
 
-	.project img {
+	.project a {
 		order: -1;
-		height: 140px;
 		align-self: center;
+	}
+
+	.project img {
+		height: 140px;
 	}
 
 	.project-content p {
@@ -265,6 +276,10 @@ body {
 
 	.project-content p {
 		font-size: 14px;
+	}
+
+	.project-content h3 {
+		font-size: 24px;
 	}
 }
 
