--- a/styles.css
+++ b/styles.css
@@ -367,9 +367,10 @@ body {
 	padding: 0 50px;
 	padding-top: 15px;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 50px
+	gap: 30px;
 }
 
 .skills-content h1 {
@@ -380,10 +381,65 @@ body {
 	color: #DE3163;
 }
 
-.skills-list {
-	list-style: none;
+.skills-content h3 {
 	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
   	font-size: 22px;
+}
+
+.technologies, .soft-skills {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 50px;
+	flex-wrap: wrap;
+}
+
+.soft-skills {
+	gap: 30px;
+}
+
+.technologies-list {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 30px;
+	flex-wrap: wrap;
+}
+
+.technology {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 15px;
+}
+
+.technology p, .soft-skills p {
+	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
+  	font-size: 16px;
+}
+
+.soft-skills-list {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.technology img {
+	height: 100px;
+}
+
+.technology img:hover {
+	filter: drop-shadow(5px 5px 25px #E195AB);
+	scale: 1.1;
+	transition: 0.5s ease;
 }
 
 /* skills: dynamic sizing */
@@ -400,12 +456,12 @@ body {
 	.skills-content {
 		gap: 20px;
 	}
-	.skills-content h1 {
+	.skills-content h3 {
 		font-size: 28px;
 	}
 
-	.skills-list {
-		font-size: 14px;
+	.technology p {
+		  font-size: 14px;
 	}
 }
 
@@ -413,13 +469,17 @@ body {
 	.skills img {
 		height: 35px;
 	}
+
+	.technology p {
+		font-size: 12px;
+	}
 }
 
 .top {
 	display: flex;
 	flex-direction: row-reverse;
 	padding: 0;
-	padding-top: 15px;
+	padding-top: 30px;
 	box-sizing: border-box;
 	font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
   	font-size: 18px;
